@@ -1,6 +1,6 @@
 DIST FretsOnFire-1.2.512-linux.tar.gz 38419070 RMD160 2b406306c31ab692fe237ec667a7d39389de70b0 SHA1 754f3c14a9b0394ce6742f9638ccf858f143ff72 SHA256 32bf3848baafc43fa42cb9afda454b68ec08b335d72f6798d58702d4d93d5f08
 DIST FretsOnFire-1.3.110.tar.gz 31676132 RMD160 348a7c443e2ee770f2bd6665f22ee6a9e818d00f SHA1 7c4922cd47304f983f7ae9fb063111ebe1122cbb SHA256 c8cca75a897a8c4cadac06f92fd85b417ac41fc19fc719e89ddcd91a3c29f9da
 DIST FretsOnFire-src-1.2.512.tar.gz 2035610 RMD160 d6136aee45d1d831880f5fe0481b4921ae19bef5 SHA1 1d63a30e067a23c5e8b319c1c13184efcd9ccf11 SHA256 1108985da2183ca2e09c2032895ba5a6c4b8e0110feef69b3608cee9d86ae9c2
-EBUILD fretsonfire-1.2.512.ebuild 2218 RMD160 83c5cf2dd7ea1b93201d7b2c554f5aaa145b6472 SHA1 502dc0c0029d436891a9b7690e954aa224d3d73e SHA256 501c496ba7ffc2fb94443b9f055a1e013648fa8b878ecfdc9fbfe8738d4b044a
+EBUILD fretsonfire-1.2.512.ebuild 2136 RMD160 618e4d00025953878f2381d2bb9e324f8e949a09 SHA1 2891f9eafd6c1eb73dfafbce52df084a200d6142 SHA256 5c0eb00381c9e90209ff578b67b7234bd05a32b9c5d69ed69909d4561ecd7163
 EBUILD fretsonfire-1.3.110.ebuild 1835 RMD160 8b32ad742396a737288d638782286bbf998ca562 SHA1 b3cd342c975e351e786f21fcc65659251674bb77 SHA256 c9bc4464302a0ee62e97ed317021917b853cfb529e365812d14b375812fdf037
-MISC ChangeLog 652 RMD160 186570f886c25a0b0d9abc23d3c6110b2d713306 SHA1 da7670c33cbc9a24af2739ff1fa90c2c89fc36f7 SHA256 bc105b1ba988a522f57fc5b12156e86f29747da19fda4ba918a7270c954c2b39
+MISC ChangeLog 757 RMD160 3ebaf7a06e0ef5c4982cca71062c5a2475998636 SHA1 da29a636b2aab598c1d1aa6a31f6952db598a7c4 SHA256 3a84581b4b5897b2fd705a86d7fc34a3b38cfd1940c288a105d3f5268a5b7b7b
