@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/fretsonfire
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 
+  26 Nov 2008; Michał Ziąbkowski <mziab@o2.pl> fretsonfire-1.2.512.ebuild:
+  Tidied up the old ebuild
+
   26 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
   +fretsonfire-1.3.110.ebuild:
   Bumped.
